# OAIP

./: README.md
LR1/: Task_3  Task_3.cpp  mlkTest  task3  testmemoryleak.cpp  блок схема Task_3.vsdx
LR1/googletest/: gtest  main.cpp
LR6/: projects.code-workspace
LR6/CmakeTestDir/: CMakeLists.txt
LR6/Gtest/: gtest.cpp  test
LR6/Task_1/: Task_1  Task_1.cpp
LR6/Task_2/: Task_2  Task_2.cpp
LR6/Task_3/: Task_3  Task_3.cpp
LR6/klasikLR6/: CMakeLists.txt  task  task.cpp
LR7/Task_1/: Task_1  Task_1.cpp
LR7/Task_2/: Task_2  Task_2.cpp
LR7/Task_3/: Task_3  Task_3.cpp
LR7/Task_4/: Task_4.cpp
LR7/Task_5/: Task_5  Task_5.cpp
LR7/klasLR7/: task  task.cpp
LR7/mnogo yzhasa/: Task_5  Task_5.cpp  Task_52  Task_52.cpp  Task_555  Task_555.cpp  last  last.cpp  resakds.cpp  reshenie  reshenie.cpp  task_dasd  task_dasd.cpp
LR8/Task_1/: main.c  receipt.c  receipt.h
LR8/Task_2/: main.cpp  market.cpp  market.h  records.txt
